# llama-rs

./: Cargo.toml  README.md
.cargo/: config.toml
host/: Cargo.toml  build.rs
host/src/: cuda_execution_context.rs  main.rs
host/src/layers/: embedding.rs  mod.rs  vecadd.rs
kernels/: Cargo.toml
kernels/src/: helpers.rs  lib.rs
