[package]
name = "kernels"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
nvptx-std = { git = "https://github.com/Gui-Yom/turbo-metrics" }
half = { version = "2.6.0", default-features = false }

[build-dependencies]
nvptx-builder = { git = "https://github.com/Gui-Yom/turbo-metrics" }
